# crm-light

./: .env  .gitignore  Rocket.toml  diesel.toml
back/: Cargo.toml  setup.md
back/migrations/2023-03-08-191754_users/: up.sql
back/migrations/2023-03-26-143039_create_data_users/: down.sql  up.sql
back/migrations/2023-04-09-183728_counterparty/: down.sql  up.sql
back/src/: cors.rs  errors.rs  main.rs  models.rs  schema.rs
back/src/controllers/: auth.rs  counterparties.rs  counterparty_statuses.rs  mod.rs  roles.rs  users.rs  vats.rs
back/src/models/: counterparty.rs  enums.rs  mod.rs  privilege.rs  user.rs
front/: app.py  main.py  setup.md
front/src/css/: auth.css  style.css
front/src/js/: auth.js
front/static/css/: auth.css  style.css
front/static/js/: auth.js
front/template/: auth.html  index.html
front/templates/: auth.html  base.html  index.html  main.html
